# examiner

./: .gitignore  CMakeLists.txt  Makefile  README.md  examinerConfig.cmake.in  libexaminer.pc.in
.github/workflows/: ci.yml  lint.yml
src/: examiner.c  examiner.h
test/: boolean_test.c  each_test.c  examiner_test.c  main.c  math_test.c  mem_test.c  pending_test.c  str_test.c
